<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@drawable/app_bg"
    tools:context=".activity.profile.ProfileBankDetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="vertical">


 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginTop="@dimen/_16sdp"
         android:fontFamily="@font/roboto_regular"
         android:text="@string/bank_detail"
         android:textColor="@color/colorMain"
         android:textSize="@dimen/_16sdp" />
     <TextView
         android:id="@+id/skip_bank_detail_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="@dimen/_16sdp"
         android:fontFamily="@font/roboto_regular"
         android:text="@string/skip"
         android:textColor="@color/colorMain"
         android:textSize="@dimen/_16sdp" />
 </RelativeLayout>






            <EditText
                android:id="@+id/et_bank_name"
                style="@style/EditBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bank_name"
                android:layout_marginTop="40dp"

                android:textCursorDrawable="@null" />
            <EditText
                android:id="@+id/et_bank_acc_no"
                style="@style/EditBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bank_acc_no"


                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/et_acc_holder_name"
                style="@style/EditBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/acc_holder_name"


                android:textCursorDrawable="@null" />
            <EditText
                android:id="@+id/et_iban"
                style="@style/EditBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/iban_code"


                android:textCursorDrawable="@null" />


            <Button
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button_rect"
                android:layout_marginTop="@dimen/_32sdp"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="@dimen/_24sdp"
                android:fontFamily="@font/roboto_medium"
                android:padding="@dimen/_16sdp"
                android:textAllCaps="true"
                android:text="@string/continue_"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>