<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.profile.ProfileUploadDocumentActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/manage_document"
                    android:textColor="@color/colorMain"
                    android:textSize="@dimen/_16sdp" />
                <TextView
                    android:id="@+id/skip_bank_detail2_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/skip"
                    android:textColor="@color/colorMain"
                    android:textSize="@dimen/_16sdp" />
            </RelativeLayout>






            <RelativeLayout
                android:id="@+id/rl_commercial_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp">

                <EditText
                    android:id="@+id/et_commercial_registration"
                    style="@style/EditBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/commercial_registration"
                    android:imeOptions="actionDone"

                    android:maxLength="15"
                    android:textCursorDrawable="@null" />

                <ImageView
                    android:id="@+id/iv_upload_commercial_profile_iv"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:padding="@dimen/_16sdp"
                    android:src="@drawable/ic_doc_upload" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_municipality_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/et_municipality_license"
                    style="@style/EditBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/municipality_license"
                    android:imeOptions="actionDone"

                    android:maxLength="15"
                    android:textCursorDrawable="@null" />

                <ImageView
                    android:id="@+id/iv_municipality_license"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:padding="@dimen/_16sdp"
                    android:src="@drawable/ic_doc_upload" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_tax_reg_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/et_tax_reg_number"
                    style="@style/EditBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tax_registration_no"
                    android:imeOptions="actionDone"

                    android:maxLength="15"
                    android:textCursorDrawable="@null" />

                <ImageView
                    android:id="@+id/iv_tax_reg_number"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:padding="@dimen/_16sdp"
                    android:src="@drawable/ic_doc_upload" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_other_doc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/et_other_doc"
                    style="@style/EditBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/other_document"
                    android:imeOptions="actionDone"

                    android:maxLength="15"
                    android:textCursorDrawable="@null" />

                <ImageView
                    android:id="@+id/iv_other_doc"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:padding="@dimen/_16sdp"
                    android:src="@drawable/ic_doc_upload" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_address_prove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/et_address_prove"
                    style="@style/EditBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/other_document"


                    android:maxLength="15"
                    android:textCursorDrawable="@null" />

                <ImageView
                    android:id="@+id/iv_address_prove"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:padding="@dimen/_16sdp"
                    android:src="@drawable/ic_doc_upload" />

            </RelativeLayout>
            <Button
                android:id="@+id/proceed_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button_rect"
                android:layout_marginTop="@dimen/_32sdp"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="@dimen/_24sdp"
                android:fontFamily="@font/roboto_medium"
                android:padding="@dimen/_16sdp"
                android:textAllCaps="true"
                android:text="@string/proceed"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>